<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dioses.DiosesPruebas.CrearPruebasActivity">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="316dp"
        android:text="ATRIBUTO:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="356dp"
        android:layout_marginEnd="312dp"
        android:text="DIFICULTAD:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="456dp"
        android:layout_marginEnd="272dp"
        android:text="IMPACTO DESTINO:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="564dp"
        android:layout_marginEnd="268dp"
        android:text="PALABRAS CLAVE:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="300dp"
        android:text="@string/DESCRIPCION"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtDescripcion"
        android:layout_width="221dp"
        android:layout_height="55dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Escribe la descripcion...."
        android:inputType="textMultiLine"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="300dp"
        android:text="@string/TIPOPRUEBA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtTipoPrueba"
        android:layout_width="216dp"
        android:layout_height="55dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="49dp"
        android:ems="10"
        android:hint="Puntual|Oraculo|Eleccion"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtPalbraclave"
        android:layout_width="227dp"
        android:layout_height="59dp"
        android:layout_marginTop="540dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="(Solo si es de eleccion)"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtAtributo"
        android:layout_width="216dp"
        android:layout_height="55dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:hint="Escribe el atributo..."
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtDificultad"
        android:layout_width="214dp"
        android:layout_height="51dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:hint="Cuanta dificultad..."
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtImpacto"
        android:layout_width="215dp"
        android:layout_height="48dp"
        android:layout_marginTop="436dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:hint="Cual sera el impacto..."
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCancelar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginBottom="32dp"
        android:text="@string/SALIR"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCrearPruebanueva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="208dp"
        android:layout_marginBottom="32dp"
        android:text="@string/CREARPRUEBAS"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>